Finished with build and server commands

--- a/test/files/test-site/index.html
+++ b/test/files/test-site/index.html
@@ -6,6 +6,10 @@ This is a website title
 
 <% start: content %>
 
-<p>Welcome to the site</p>
-
+<p>dd ddddçbah to the site</p>
+<hr />
+o
+<%= partial: shared/partials/_analytics.html %>
+<hr />
 <% end: content %>
+
