--- a/test/files/test-site/output/local/subfolder/subsubfolder/page.html
+++ b/test/files/test-site/output/local/subfolder/subsubfolder/page.html
@@ -4,15 +4,8 @@
 
     <title>This is a page in a sub subfolder</title>
 
-    
-<!-- Global Site Tag (gtag-js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() {databayer-push (arguments) ; }
-  gtag( 'js', new Date());
-  gtag( 'config', 'GA_TRACKING_ID' );
-</script>
+    <h1>foobarwddd</h1>
+
 
     
 <!-- Meta tags -->
