--- a/lib/geb/samples/bootstrap_jquery/page.html
+++ b/lib/geb/samples/bootstrap_jquery/page.html
@@ -5,7 +5,29 @@ This is another page
 <% end: title %>
 
 <% start: content %>
-
-<p>Welcome to the other page</p>
+<div class="px-4 py-5 my-5 text-center">
+  <img class="d-block mx-auto mb-4" src="/assets/images/hero.png" alt="" width="200" height="200">
+  <h1 class="display-5 fw-bold text-body-emphasis">All hail GEB the great</h1>
+  <div class="col-lg-6 mx-auto">
+    <p class="lead mb-4">
+      Geb, draws a symbolic connection to the ancient Egyptian god Geb, the deity of the Earth.
+      Just as Geb the god provides a stable foundation for the world, software Geb offers a robust 
+      and essential foundation for building and managing static websites, which are the very bedrock
+      of the web. 
+    </p>
+    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+      <a class="btn btn-lg btn-primary me-lg-3 mb-4 mb-lg-0" href="https://github.com/mainfram-work/geb.git" target="_blank" role="button"><i class="bi bi-github"></i> Github Repo</a>
+      <a class="btn btn-lg btn-outline-primary me-lg-3 mb-4 mb-lg-0 text-white" href="#" role="button">
+        <svg width="18px" height="18px" viewBox="-18.5 0 293 293" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid">
+          <g fill="#FFFFFF">
+            <path d="M76.7478977,97.4337652 L76.585237,97.2711045 L40.4745594,133.381782 L128.148682,220.893244 L164.25936,184.945227 L215.822805,133.381782 L179.712127,97.2711045 L179.712127,97.1084438 L76.585237,97.1084438 L76.7478977,97.4337652 Z"></path>
+            <path d="M127.823361,0.975964259 L0.1347034,74.1732837 L0.1347034,220.567923 L127.823361,293.765242 L255.512018,220.567923 L255.512018,74.1732837 L127.823361,0.975964259 L127.823361,0.975964259 Z M231.112911,206.579102 L127.823361,266.112921 L24.5338099,206.579102 L24.5338099,87.8367833 L127.823361,28.3029635 L231.112911,87.8367833 L231.112911,206.579102 L231.112911,206.579102 Z"></path>
+          </g>
+        </svg>
+        Rubygems
+      </a>
+    </div>
+  </div>
+</div>
 
 <% end: content %>
