Fixed basic site template

--- a/lib/geb/samples/basic/index.html
+++ b/lib/geb/samples/basic/index.html
@@ -6,6 +6,29 @@ This is a website title
 
 <% start: content %>
 
-<p>Welcome to the site</p>
+<!-- Main area, two by one, auto resize, no bootstrap  -->
+<div class="main">
+  <div class="main-left">
+    <h1>gem install <highlight>geb</highlight></h1>
+    <p>Build, manage and share static websites and templates, all hail geb the great.</p>
+    <p>
+      <a href="https://github.com/mainfram-work/geb.git" target="_blank">Github Repo</a><br />
+      <a href="https://rubygems.org/gems/geb" target="_blank">Ruby Gems</a
+    </p>
+    <p>
+      <small>
+        Geb, draws a symbolic connection to the ancient Egyptian god Geb, the deity of the Earth.
+        Just as Geb the god provides a stable foundation for the world, software Geb offers a robust 
+        and essential foundation for building and managing static websites, which are the very bedrock
+        of the web. 
+      </small>
+    </p>
+  </div>
+  <div class="main-right">
+    <img src="/assets/images/hero.png" alt="...">
+  </div>
+</div>
+
+
 
 <% end: content %>
