--- a/lib/geb/samples/bootstrap_jquery/index.html
+++ b/lib/geb/samples/bootstrap_jquery/index.html
@@ -18,7 +18,7 @@ Sample Site - (bootstrap 5 & jquery 3.6.0)
               <p class="lead fw-normal text-white mb-5">Build, manage and share static websites and templates, all hail geb the great</p>
               <div class="d-flex flex-column flex-lg-row align-items-center">
                   <a class="btn btn-success me-lg-3 mb-4 mb-lg-0" href="https://github.com/mainfram-work/geb.git" target="_blank" role="button"><i class="bi bi-github"></i> Github Repo</a>
-                  <a class="btn btn-success me-lg-3 mb-4 mb-lg-0" href="#" role="button">
+                  <a class="btn btn-success me-lg-3 mb-4 mb-lg-0" href="https://rubygems.org/gems/geb" target="_blank" role="button">
                     <svg width="18px" height="18px" viewBox="-18.5 0 293 293" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid">
                       <g fill="#FFFFFF">
                         <path d="M76.7478977,97.4337652 L76.585237,97.2711045 L40.4745594,133.381782 L128.148682,220.893244 L164.25936,184.945227 L215.822805,133.381782 L179.712127,97.2711045 L179.712127,97.1084438 L76.585237,97.1084438 L76.7478977,97.4337652 Z"></path>
